061051249868/Pipe/beta/app1-beta-8/main.tf
terraform {
  required_version = ">= 1.0.0"

  required_providers {
    aws = {
      source  = "hashicorp/aws"
      version = "~> 5.0"
    }
  }

  backend "s3" {
    bucket         = "bucket-teste-backend-terraform"
    key            = "061051249868/Pipe/beta/app1-beta-8/main.tfstate"
    region         = "us-east-1"
    dynamodb_table = "TableBE"
    encrypt        = true
  }
}

# --- Main Cloud Provider ---
provider "aws" {
  region = "us-east-1"
}

data "aws_caller_identity" "current" {}
data "aws_region" "current" {}

### EXTERNAL REFERENCES ###

data "aws_vpc" "app-prod" {
  filter {
    name                            = "tag:Name"
    values                          = ["app-prod"]
  }
}

data "aws_internet_gateway" "IGW9" {
  filter {
    name                            = "tag:Name"
    values                          = ["IGW9"]
  }
}




### CATEGORY: NETWORK ###

resource "aws_subnet" "private-a1-beta-8" {
  vpc_id                            = data.aws_vpc.app-prod.id
  availability_zone                 = "us-east-1a"
  cidr_block                        = "10.13.6.0/24"
  map_public_ip_on_launch           = false
  tags                              = {
    "Name" = "private-a1-beta-8"
    "State" = "app1-beta-8"
    "CloudmanUser" = "SystemUser"
    "Stage" = "beta"
  }
}

resource "aws_subnet" "private-b1-beta-8" {
  vpc_id                            = data.aws_vpc.app-prod.id
  availability_zone                 = "us-east-1b"
  cidr_block                        = "10.13.7.0/24"
  map_public_ip_on_launch           = false
  tags                              = {
    "Name" = "private-b1-beta-8"
    "State" = "app1-beta-8"
    "CloudmanUser" = "SystemUser"
    "Stage" = "beta"
  }
}

resource "aws_subnet" "public-a1-beta-8" {
  vpc_id                            = data.aws_vpc.app-prod.id
  availability_zone                 = "us-east-1a"
  cidr_block                        = "10.13.8.0/24"
  map_public_ip_on_launch           = true
  tags                              = {
    "Name" = "public-a1-beta-8"
    "State" = "app1-beta-8"
    "CloudmanUser" = "SystemUser"
    "Stage" = "beta"
  }
}

resource "aws_subnet" "public-b1-beta-8" {
  vpc_id                            = data.aws_vpc.app-prod.id
  availability_zone                 = "us-east-1b"
  cidr_block                        = "10.13.9.0/24"
  map_public_ip_on_launch           = true
  tags                              = {
    "Name" = "public-b1-beta-8"
    "State" = "app1-beta-8"
    "CloudmanUser" = "SystemUser"
    "Stage" = "beta"
  }
}

resource "aws_route" "aws_route_RT13_beta_8_IGW9" {
  gateway_id                        = data.aws_internet_gateway.IGW9.id
  route_table_id                    = aws_route_table.RT13-beta-8.id
  destination_cidr_block            = "0.0.0.0/0"
}

resource "aws_route_table" "RT12-beta-8" {
  vpc_id                            = data.aws_vpc.app-prod.id
  tags                              = {
    "Name" = "RT12-beta-8"
    "State" = "app1-beta-8"
    "CloudmanUser" = "SystemUser"
    "Stage" = "beta"
  }
}

resource "aws_route_table" "RT13-beta-8" {
  vpc_id                            = data.aws_vpc.app-prod.id
  tags                              = {
    "Name" = "RT13-beta-8"
    "State" = "app1-beta-8"
    "CloudmanUser" = "SystemUser"
    "Stage" = "beta"
  }
}

resource "aws_route_table_association" "aws_route_table_association_private_a1_beta_8_RT12_beta_8" {
  route_table_id                    = aws_route_table.RT12-beta-8.id
  subnet_id                         = aws_subnet.private-a1-beta-8.id
}

resource "aws_route_table_association" "aws_route_table_association_private_b1_beta_8_RT12_beta_8" {
  route_table_id                    = aws_route_table.RT12-beta-8.id
  subnet_id                         = aws_subnet.private-b1-beta-8.id
}

resource "aws_route_table_association" "aws_route_table_association_public_a1_beta_8_RT13_beta_8" {
  route_table_id                    = aws_route_table.RT13-beta-8.id
  subnet_id                         = aws_subnet.public-a1-beta-8.id
}

resource "aws_route_table_association" "aws_route_table_association_public_b1_beta_8_RT13_beta_8" {
  route_table_id                    = aws_route_table.RT13-beta-8.id
  subnet_id                         = aws_subnet.public-b1-beta-8.id
}
